# AgriVita

./: .gitignore  docker-compose.yml  render.yaml  vercel.json
back-end/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  auth.py  db.py  main.py  models.py  pyproject.toml  requirements.txt
back-end/alembic/: env.py
back-end/alembic/versions/: 77b5f53f49be_add_user_table_with_auth.py  a1b2c3d4e5f6_add_phone_and_profile_columns.py
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json
frontend/scripts/: dev-start.cjs  dev-start.js
frontend/src/: App.jsx
frontend/src/components/: ScanComp.jsx
frontend/src/components/DashboardPage-components/: SideBar.jsx  mainDashboard.jsx
frontend/src/components/LandingPage-components/: CTASection.jsx  FeaturesSection.jsx  Footer.jsx  HeroSection.jsx  HowItWorksSection.jsx  Navbar.jsx  StatsSection.jsx
frontend/src/pages/: AgriVitaAuth.jsx  AgriWeatherEthiopia.jsx  Dashboard.jsx  DiseaseScan.jsx  History.jsx  LandingPage.css  PestScan.jsx  Profile.jsx  Scan.jsx  Weather.jsx
