[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.27",
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.12.1",
    "bcrypt>=5.0.0",
    "python-jose>=3.5.0",
    "psycopg2-binary>=2.9.12",
]
